--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
     font-family: 'Megrim', cursive;
     font-size: 3rem;
-    margin: 20px 0 -20px 0;
+    margin: 20px 0 0 0;
 }
 
 #description {
