--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
     font-family: 'Megrim', cursive;
     font-size: 3rem;
-    margin: 20px 0 10px 0;
+    margin-top: 20px;
 }
 
 #description {
@@ -111,6 +111,11 @@ p {
     font-size: 1.3rem;
     margin: 10px 0 10px 0;
 }
+
+#submit-label {
+    margin-top: 20px;
+}
+
 /*Desktop Font Sizing*/
 
 @media (min-width: 1024px) {
