--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,244 @@
+
 body {
+    height: 100%;
+    margin: 5px;
+    background: url(https://res.cloudinary.com/scrumpylungs/image/upload/v1588618270/freeCodeCamp%20Survey%20Form/stage-view_bfh01n.jpg) no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.header-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#title {
+    color: rgb(253, 210, 130);
+    text-align: center;
+    font-family: 'Megrim', cursive;
+    margin: 10px 5px 10px 5px;
+}
+
+#description {
+    color: rgb(221, 222, 255);
+    text-align: center;
+    font-family: 'Poiret One', cursive;
+    margin: 5px 10px 15px 10px;
+}
+
+
+#survey-form {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 90%;
+    max-width: 600px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: solid 2px rgb(175, 134, 57);
+    border-radius: 5px;
+}
+
+.form-box {
+    display: inline-flex;
+    flex-direction: column;
+    margin: 20px;
+    padding: 0;
+}
+
+label, legend {
+    color: rgb(253, 210, 130);
+    font-family: 'Barlow Condensed', sans-serif;
+    padding-bottom: 10px;
+}
+
+fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+p {
+    color: rgb(253, 210, 130);
+    font-family: 'Barlow Condensed', sans-serif;
+    margin: 20px 0 10px 0;
+}
+
+.text-input {
+    border-radius: 5px;
+    font-family: 'Barlow Condensed', sans-serif;
+    background: linear-gradient(145deg, rgb(255, 255, 255),rgb(201, 201, 201));
+    color: rgb(49, 49, 49);
+    padding: 5px;
+}
+
+select {
+    font-family: 'Barlow Condensed', sans-serif;
+    background: linear-gradient(145deg, rgb(255, 255, 255),rgb(201, 201, 201));
+    color: rgb(49, 49, 49);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+option {
+    font-family: 'Barlow Condensed', sans-serif;
+    color: rgb(49, 49, 49);
+    padding 5px;
+}
+
+.radio {
+    margin: 10px;
+}
+
+.check {
+    margin: 10px;
+}
+
+.submit-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 10px 20px 10px;
+}  
+
+textarea {
+    font-family: 'Barlow Condensed', sans-serif;
+    color: rgb(49, 49, 49);
+    border-radius: 5px;
+}
+
+
+#submit {
+    padding: 10px 30px 10px 30px;
+    width: fit-content;
+    border: outset black 2px;
+    border-radius: 5px;
+    background-image: linear-gradient(145deg, rgb(199, 147, 50), rgb(196, 161, 98));
+    font-family: 'Barlow Condensed', sans-serif;
+    color: black;
+    text-align: center;
+}
+
+#submit:hover {
+    background-image: linear-gradient(145deg, rgb(252, 184, 59), rgb(255, 203, 107));
+    cursor: pointer;
+}
+
+.radio:focus, .check:focus {
+    outline-width: 2px;
+    outline-style: inset;
+    outline-color: rgb(199, 147, 50);
+}
+
+/* BASE Mobile Font Sizing */
+
+
+#title {
+    font-size: 3.2rem;
+}
+
+#description {
+    font-size: 1.5rem;
+}
+
+.text-input, textarea, select {
+    font-size: 1.2rem;
+}
+
+label, legend, p {
+    font-size: 1.4rem;
+}
+
+#submit {
+    font-size: 1.5rem;
+}
+
+/* Tablet Phone Sizing */
+@media only screen and (min-width : 768px) and (max-width : 1024px) {
+
+    #title {
+        font-size: 4rem;
+    }
+    
+    #description {
+        font-size: 2.2rem;
+    }
+    
+    .text-input, textarea, select {
+        font-size: 1.3rem;
+    }
+    
+    label, legend, p {
+        font-size: 1.5rem;
+
+    }
+    
+    #submit {
+        font-size: 1.8rem;
+    }
+}
+
+
+
+/*Desktop Font Sizing*/
+
+@media (min-width: 1024px) {
+
+    .form-box {
+        padding: 5px;
+    }
+
+    #title {
+        font-size: 5rem;
+        margin: 20px;
+    }
+
+    #description {
+        font-size: 2.8rem;
+        margin: 20px 0 40px 0;
+    }
+
+    .text-input, textarea, select {
+        font-size: 1.4rem;
+    }
+    
+    label, legend, p {
+        font-size: 1.6rem;
+
+    }
+    
+    #submit {
+        font-size: 2.2rem;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
     height: 100%;
     margin: 5px;
     background: url(https://res.cloudinary.com/scrumpylungs/image/upload/v1588618270/freeCodeCamp%20Survey%20Form/stage-view_bfh01n.jpg) no-repeat center center;
@@ -134,7 +374,7 @@ textarea {
 
 /*Desktop Font Sizing*/
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
 
     html {
         font-size: 1.03vw;
@@ -159,14 +399,14 @@ textarea {
         font-size: 1.9rem;
     }
 
-}
+} */
 
 /* Tablet Sizing */
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
+/* @media only screen and (min-width : 768px) and (max-width : 1024px) {
 
     html {
         font-size: 1.15rem;
     }
 
 
-}
+} */
