--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ select {
 option {
     font-family: 'Barlow Condensed', sans-serif;
     color: rgb(49, 49, 49);
-    padding 5px;
+    padding: 5px;
 }
 
 .radio {
