changes image links to new cloud storage

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 body {
     height: 100%;
     margin: 5px;
-    background: url(https://res.cloudinary.com/scrumpylungs/image/upload/v1588618270/freeCodeCamp%20Survey%20Form/stage-view_bfh01n.jpg) no-repeat center center;
+    background: url(https://res.cloudinary.com/cjcon90/image/upload/v1589740727/FCC/music-academy-sign-up/stage-view_bfh01n_kcnhp4.jpg) no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
 }
